Add support for the hermit target
This squashes our work on 1aafc9fee5bd595b0f828a383a978ed445aeedb9 and
reformats some changes for the patch to be purely additive.

This drops:
* .bintray_descriptor.json
* .travis.yml
* tests.sh
* 1aafc9fee5bd595b0f828a383a978ed445aeedb9
* 70b2820be4b8aaf23c9b96730047f3a36dc0e4f9

--- a/binutils/doc/binutils.texi
+++ b/binutils/doc/binutils.texi
@@ -4775,6 +4775,7 @@ Set the matching input ELF file OSABI to @var{osabi}.  If
 
 The supported ELF OSABIs are, @var{none}, @var{HPUX}, @var{NetBSD},
 @var{GNU}, @var{Linux} (alias for @var{GNU}),
+@var{HermitCore},
 @var{Solaris}, @var{AIX}, @var{Irix},
 @var{FreeBSD}, @var{TRU64}, @var{Modesto}, @var{OpenBSD}, @var{OpenVMS},
 @var{NSK}, @var{AROS} and @var{FenixOS}.
